fixed column collapsing thing

--- a/static/style2.css
+++ b/static/style2.css
@@ -40,6 +40,11 @@ body{
 	float:none;
 	vertical-align: top;
 	border: 1px solid black;
+	height: 100%;
+}
+
+#preview-container{
+	height: 100%;
 }
 
 #editing{
@@ -53,6 +58,15 @@ body{
 	background-color: #D3D3D3;
 	box-shadow: inset 0 3px 8px #000000;
 	margin-bottom: 15px;
+	border: solid green;
+	height: 100%;
+}
+
+#before-after-container{
+	border: solid red;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
 
 .preview-img{
